мелкие правки cloud.tex

--- a/cloud.tex
+++ b/cloud.tex
@@ -2,7 +2,7 @@
 
 Основной сложностью обеспечения передачи данных при использовании подвижного mesh 802.11s является динамичное изменение структуры сети, требующее использования дополнительных средств для поддержки маршрутизации сетевого трафика. Изменение доступных маршрутов передачи данных во время передачи сообщения приводит в увеличению времени передачи и, возможно, к потере сообщения. Основными параметрами влияющими на свойства подвижной mesh-сети(802.11s) передачи данных являются скорости движения объектов, территориальное расположение узлов сети, радиус действия передатчиков и время подключения к сети.
  
-Большинство авторов работ оставляют вне рассмотрения ситуации отсутствия непрерывной связи со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облаком можно обеспечить путём ретрансляции сообщений через них. При наличии многих точек доступа в облако возникает альтернатива выбора точки передачи сообщений в облачную среду. Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов MESH сетях [… ], которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно-ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облако и оценить перспективность передачи и приёма данных через них. 
+Большинство авторов оставляют вне рассмотрения ситуации отсутствия непрерывной связи со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облаком можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде (к облаку) возникает альтернатива выбора точки передачи сообщений в облачную среду. Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов MESH сетях [… ], которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно-ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них. 
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -17,11 +17,9 @@
  
 Связь с облаком может осуществляться двумя путями: непосредственно автомобилем, оборудованным аппаратурой связи; через стационарный узел. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно. 
 
-Важнейшими задачами построения такой сети является выбор вариантов использования протоколов передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам MESH сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
+Важнейшими задачами построения такой сети является выбор вариантов использования протоколов маршрутизации и передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам  сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
 
-В данной работе исследуются вопросы повышения достоверности передачи сообщений между облачной средой и mesh (802.11s) сетью.
-
-На автомобилях (узлах сети) установлен набор интерфейсов, позволяющих одновременно являться участником LTE и mesh сетей, или только mesh (передача данных только между автомобилями). Узел, обладающий двумя интерфейсами (LTE, 802.11s), выполняет роль шлюза, обеспечивающего передачу данных между mesh сетью и облачной средой посредством LTE.
+В рамках представленного исследования рассматривается mesh сеть автомобилей частично оборудованных многоинтерфейсными передатчиками, обеспечивающими работу с различными сетями передачи данных. На автомобилях (узлах сети) установлен набор интерфейсов, позволяющих одновременно являться участником LTE и mesh сетей, или только mesh (передача данных только между автомобилями). Узел, обладающий двумя интерфейсами (LTE, 802.11s), выполняет роль шлюза, обеспечивающего передачу данных между mesh сетью и облачной средой посредством LTE.
 
 Для широкого внедрения mesh-сетей необходима совместимость с существующими сетевыми стандартами и протоколами, её наличие позволило бы множеству mesh-сетей различных производителей, взаимодействовать на канальном и сетевом уровнях OSI, включая протоколы IPv4 и IРv6. Сеть смогла бы объединять устройства с различными интерфейсами беспроводной связи. В настоящее время в корпорации Intel ведутся работы по решению этой задачи на уровне перенастроек радиопередающей системы, адаптируемые к любой среде беспроводной связи. Такой подход является существенно менее дорогим, чем реализация нескольких беспроводных интерфейсов в каждом устройстве. Технология разработки универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных запатентована Intel [2].
 
