--- a/article_IP.tex
+++ b/article_IP.tex
@@ -100,28 +100,28 @@ Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, 
 %\section{Введение}
 \input{intro.tex}
 
-\section{Автомобильные телекоммуникационные сервисы}
+\section{Автомобильные телекоммуникационные сервисы}%Сергей
 \input{auto.tex}
 
-\section{Телематические технологии доступа к сервисам}
+\section{Телематические технологии доступа к сервисам}%Лёня и Вадик
 %Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)
 \input{telematics.tex}
 
-\section{Облачно--ориентированная избыточная мультипротокольная сеть}
+\section{Облачно--ориентированная избыточная мультипротокольная сеть}%Лёня и Вадик
 %Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками
 \input{cloud.tex}
 
-\section{Реализация среды моделирования передачи сообщений в сети автомобилей} 
+\section{Реализация среды моделирования передачи сообщений в сети автомобилей}%Вадик
 %Среда моделирования ns-3
 \input{implementation.tex}
 
-\section{Исследование (?)}
+\section{Исследование (?)}%Лёня
 \input{research.tex}
 
-\section{Заключение}
+\section{Заключение}%Серёжа и все
 \input{conclusion.tex}
 
-\section{Литература}
+\section{Литература}%Серёжа
 
 \input{authors.tex}
 
