Изменения в файле implementation. Описаны некоторые подразделы. Немного изменен текст

--- a/implementation.tex
+++ b/implementation.tex
@@ -1,14 +1,14 @@
-Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем[2]).
+Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем[2]). %поправить ссылки
  
-Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns-3 открыты для исследования, модификации и использования и доступны на сайте проекта[2]. В качестве встроенного языка описания моделей используются: C++ и Python. 
+Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns-3 открыты для исследования, модификации и использования и доступны на сайте проекта[2]. В качестве встроенного языка описания моделей используются: C++ и Python. %поправить ссылки
 
 В ns-3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
-Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)[3].
+Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)[3]. %поправить ссылки
 
-Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках[1].
+Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках[1]. %поправить ссылки
 
-Среда постановки эксперимента для мультипротокольной сети
+\subsection{Среда постановки эксперимента для мультипротокольной сети транспортных средств}
 
 Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
 
@@ -33,14 +33,14 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-На рисунке ~/ref{ref:fig:architecture} приведена разработанная структура среды модели мультипротокольной сети.
+На рисунке ~\ref{ref:fig:architecture} приведена разработанная структура среды модели мультипротокольной сети.
 
 Реализованная модель содержит следующие модули ns-3: 
 
 \begin{itemize}
 
 \item[$-$]Модель интерфейса 802.11s [5]. Реализация допускает использование протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
--Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV [2].
+-Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV [2]. %поправить ссылки
 
 \item[$-$]FlowMonitor - модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
 
@@ -54,7 +54,9 @@
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
-Для реализации модели с использованием мультипротокольного узла, обеспечивающего взаимодействие сетей, на примере, LTE и mesh необходимо выполнить следующие действия:
+\subsection{Описание мультипротокольного узла в среде моделирования}
+
+Алгоритм создания мультипротокольного узла, обеспечивающего взаимодействие двух сетей, на примере, LTE и mesh (802.11s):
 
 \begin{enumerate}
 
@@ -80,12 +82,12 @@
 
 \end{enumerate}
 
-В процессе моделирования перемещение мультипротокольного подвижного узла осуществляется заданием параметров схемы движения абонента. Координаты мультипротокольного мобильного узла наследуются от координат абонента. Перемещение абонента осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
+Для проведения эксперимента был создан узел позволяющий осуществлять доставку пакетов между мультипротокольными узлами mesh-сети для сетей 802.11s и LTE.
+Такая схема взаимодействия потребовала, дополнительно создания виртуального интерфейса, через который бы происходила маршрутизация между сетями.
+Базовая реализация взаимодействия показана на рисунке~\ref{fig:basic_realisation}.
+Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
+Реализация мультипротокольного узла выполнена на основе виртуального узла точка-точка, обеспечивающего промежуточное взаимодействие между интерфейсами 802.11s и LTE.
 
-В симуляторе ns-3 версии 3.16 предложено расширение возможностей симулятора добавлением мультипротокольного узла, выполняющего роль шлюза между беспроводными сетями 802.11s, 802.11p (рисунок~\ref{fig:basic_realisation}). Построение имитационной модели подвижной сети передачи данных потребовало реализации модели узла (рисунок~\ref{fig:multiprotocol_realisation}), реализующей функцию маршрутизации сообщений между сетями передачи данных 802.11s и 802.11p. Реализация мультипротокольного узла выполнена на основе виртуального узла точка-точка, обеспечивающего промежуточное взаимодействие между интерфейсами 802.11s и 802.11p. На узлах сети установлен набор интерфейсов, позволяющих одновременно являться участником различных mesh-сетей. Узел, обладающий двумя интерфейсами (802.11s, 802.11p), выполняет роль шлюза, обеспечивающего передачу данных между двумя mesh-сетями.
-
-В качестве примера создан узел приведенный на рисунке~\ref{fig:multiprotocol_realisation} схема позволяющий осуществлять доставку пакетов между мультипротокольными узлами mesh-сети.
- 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
  \centering{
@@ -104,5 +106,10 @@
 % \vspace{-0.1cm}
 \end{figure}
 
+В процессе моделирования перемещение мультипротокольного подвижного узла осуществляется путем задания параметров схемы движения транспортного средства. Координаты мультипротокольного мобильного узла наследуются от координат транспортного средства. Перемещение узла осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
+
+\subsection{Параметры эксперимента}
+
+%FIXME переделать в список?
 Для проведения исследований разработана технология инициализации параметров: распределение событий связанных с перемещением абонента (изменение скорости и характера движения); процент потерь пакетов в канале; применяемые протоколы маршрутизации; скорость передачи данных; число узлов в моделируемой сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; тип транспортного протокола передачи данных. В процессе моделирования измеряемыми параметрами являются: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений.
 
