--- a/authors.tex
+++ b/authors.tex
@@ -10,5 +10,4 @@
 \noindent\textbf{Alexander L. Tulupyev} — PhD in Computer Science, Associate Professor; acting Head of Theoretical and Interdisciplinary Computer Science Laboratory, SPIIRAS, Associate Professor of Computer Science Department, SPbSU. Research area: uncertain data and knowledge representation and processing, mathematics and computer science applications in socio-cultural studies, biostatistics, simulation, and mathematical modeling applications in epidemiology, data intensive software systems development technology. Number of publications — 160. ALT@iias.spb.su, www.tulupyev.spb.ru; SPIIRAS, 14-th line V.O., 39, St. Petersburg, 199178, Russia; office phone +7(812)328-3337, fax +7(812)328-4450.\vskip 1mm}
 
 
-{\footnotesize \noindent\textbf{Поддержка исследований.} Работа выполнена при финансовой поддержке РФФИ, проект № 13-07-12106 офи_м.
-}
+% {\footnotesize \noindent\textbf{Поддержка исследований.} Работа выполнена при финансовой поддержке РФФИ, проект № 13-07-12106 офи_м.}
