Обновлена нумерация разделов

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,12 +1,14 @@
+{\bf{\SetMySection} Заключение.} Здесь должен быть текст.
+
 \begin{itemize}
 
-\item Поставлена актуальная задача исследования поведения мобильной беспроводной сети передачи данных на основе 802.11s, LTE в направлении использования сервисов облачной среды;
+\item[$-$] Поставлена актуальная задача исследования поведения мобильной беспроводной сети передачи данных на основе 802.11s, LTE в направлении использования сервисов облачной среды;
 
-\item Разработана модель беспроводной сети передачи данных, на основании интеллектуальной модели движения транспорта (IDM), отличающаяся от аналогов наличием мульти-протокольных узлов, обеспечивающих взаимодействие сетей 802.11s, LTE и облачной среды;
+\item[$-$] Разработана модель беспроводной сети передачи данных, на основании интеллектуальной модели движения транспорта (IDM), отличающаяся от аналогов наличием мульти-протокольных узлов, обеспечивающих взаимодействие сетей 802.11s, LTE и облачной среды;
 
-\item Выбраны набор параметров и область их значений: протоколы маршрутизации, интенсивность трафика данных, количество узлов сети и т.д., позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
+\item[$-$] Выбраны набор параметров и область их значений: протоколы маршрутизации, интенсивность трафика данных, количество узлов сети и т.д., позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
 
-\item Получены оценки уровня надёжности передачи данных; реальной скорости передачи данных, обеспечиваемых сетью и среднего времени обмена сообщениями узла сети с облачной средой.
+\item[$-$] Получены оценки уровня надёжности передачи данных; реальной скорости передачи данных, обеспечиваемых сетью и среднего времени обмена сообщениями узла сети с облачной средой.
 
 \end{itemize}
 
@@ -16,12 +18,12 @@
 
 \begin{itemize}
 
-\item архитектура среды моделирования mesh-сети развёрнутой в экстремальных условиях, основанной на использовании мультипротокольных узлов;
+\item[$-$] архитектура среды моделирования mesh-сети развёрнутой в экстремальных условиях, основанной на использовании мультипротокольных узлов;
 
-\item разработана модель мультипротокольного узла в среде ns-3. Созданая модель обеспечивает маршрутизацию между доступными сетевыми интерфейсами;
+\item[$-$] разработана модель мультипротокольного узла в среде ns-3. Созданая модель обеспечивает маршрутизацию между доступными сетевыми интерфейсами;
 
-\item технология моделирования высоконадежных сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
+\item[$-$] технология моделирования высоконадежных сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
 
-\item разработана среда моделирования mesh на базе ns-3. Полученная среда моделирования позволяет произвести оценки работы сетевых узлов (абонентов) в экстремальных условиях.
+\item[$-$] разработана среда моделирования mesh на базе ns-3. Полученная среда моделирования позволяет произвести оценки работы сетевых узлов (абонентов) в экстремальных условиях.
 
 \end{itemize}
