--- a/research.tex
+++ b/research.tex
@@ -1,8 +1,6 @@
-\subsection{Поставновка эксперимента}
+{\bf{\SetMySection} Исследование (?).} Здесь нужен текст.
 
-Исходные данные для экспериментов.
-
-Для проведения экспериментов определена область допустимых значений изменяемых параметров:
+{\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов определена область допустимых значений изменяемых параметров:
 
 \begin{itemize}
 
@@ -26,10 +24,9 @@
 
 Заданная такими границами область значений параметров моделирования позволяет исследовать наиболее динамичные периоды существования mesh сети (короткое время жизни сети, широкий диапазон интенсивности сетевого трафика, высокая интенсивность перераспределения маршрутов).
 
-\subsection{Анализ результатов исследования}
+{\bf{\SetMySubSection} Анализ результатов исследования.} Здесь нужент текст.
 
-\subsubsection{Оценка отношений расчётной и фактической скоростей передачи сообщений.} 
-Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетях для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
+{\bf{\SetMySubSubSection} Оценка отношений расчётной и фактической скоростей передачи сообщений.} Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетях для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -52,23 +49,21 @@
 
 Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
 
-\subsubsection{Оценка достоверности доставки сообщений}
- 
-Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
+{\bf{\SetMySubSubSection} Оценка достоверности доставки сообщений.} Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
 
 \begin{itemize}
 
-\item Число подвижных узлов-ретрансляторов фиксировано --- 16.
+\item[$-$] Число подвижных узлов-ретрансляторов фиксировано --- 16.
 
-\item Скорость передачи сообщений (от 8 до 2048 Кбит/сек.).
+\item[$-$] Скорость передачи сообщений (от 8 до 2048 Кбит/сек.).
 
-\item Размер передаваемого сообщения фиксирован --- 1024 байт.
+\item[$-$] Размер передаваемого сообщения фиксирован --- 1024 байт.
 
-\item Максимальная корость движениея узла 50 км/час.
+\item[$-$] Максимальная корость движениея узла 50 км/час.
 
-\item Фрагмент проезжей части 800м с 4-я поворотами 90 градусов.
+\item[$-$] Фрагмент проезжей части 800м с 4-я поворотами 90 градусов.
 
-\item 4 протокола маршрутизации: OLSR, HWMP, DSDV, AODV.
+\item[$-$] 4 протокола маршрутизации: OLSR, HWMP, DSDV, AODV.
 
 \end{itemize}
 
@@ -85,23 +80,21 @@
 
 Диапазон потерянных сообщений составляет 10 - 46\%. С увеличением скорости передачи он возрастаем примерно в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
 
-\subsubsection{Оценка среднего значения задержки отклика от облачной среды}
-
-Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
+{\bf{\SetMySubSubSection} Оценка среднего значения задержки отклика от облачной среды.} Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
 
 В процессе моделирования были заданы следующие значения параметров:
 
 \begin{itemize}
 
-\item средняя скорость передачи 512 Кбит/сек,
+\item[$-$] средняя скорость передачи 512 Кбит/сек,
 
-\item TCP трафик,
+\item[$-$] TCP трафик,
 
-\item размер сообщения 1024 байт,
+\item[$-$] размер сообщения 1024 байт,
 
-\item фрагмент четырёхполосной проезжей части 800 м. с 4 поворотами 90 градусов,
+\item[$-$] фрагмент четырёхполосной проезжей части 800 м. с 4 поворотами 90 градусов,
 
-\item максимальная скорость движения узлов 50 км/ч.
+\item[$-$] максимальная скорость движения узлов 50 км/ч.
 
 \end{itemize}
 
@@ -138,4 +131,3 @@
 На рисунке~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом LTE на 25\%, 12\%, 6\%, 3\%.
 
 По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль/час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду, такие как DSRC (при наличии покрытия дороги).
-
