--- a/telematics.tex
+++ b/telematics.tex
@@ -1,4 +1,4 @@
-Увеличение объема двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует всё новые требования к обеспечению информационной поддержки автомобильных сетей.
+{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объема двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует всё новые требования к обеспечению информационной поддержки автомобильных сетей.
 
 %выкинуть?
 %Отсутствие стабильного покрытия автотрасс сетями 2G/3G/4G, используемыми для обеспечения доступа к внешним облачным сетевым сервисам и службам ЭРА-ГЛОНАС, а также невозможность оборудования каждого автомобиля средствами выхода в локальные и глобальные сети ставит задачу разработки альтернативных методов передачи данных в мобильной сети. Главным требованием к этим методам является обеспечение каждому автомобилю надежного доступа к локальным и глобальным сетям во время движения на любом участке автотрассы.
@@ -57,7 +57,6 @@
 \end{itemize}
 
 Автомобиль может содержать устройства для подключения к локальным сетям используя различные технологии, для формирования подключения к различным топологиям и получения доступа к соответствующим сетевым сервисам и данным.
-
 
 %выкинуть?
 %Первая проблема решается использованием в аппаратуре сетевого оборудования общего набора сетевых стандартов и протоколов передачи данных. Совместимость стандартов обеспечивает устойчивую работу сетей на физическом, канальном и сетевом уровнях модели OSI. Другими словами производители оборудования разрабатывают и используют универсальные реконфигурируемые интерфейсы для доступа как к глобальным и локальным беспроводным сетям.
