--- a/summary.tex
+++ b/summary.tex
@@ -6,7 +6,7 @@
 
 \end{center}
 
-{\em Опарин~В.В., Тулупьев~А.Л.\/} \textbf{Синтез графа смежности с минимальным числом ребер: формализация алгоритма и анализ его корректности.}
+{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
 {\small Текст}
 
@@ -18,6 +18,6 @@
 
 \end{center}
 
-{\em Oparin~V.V., Tulupyev~A.L.\/} \textbf{Synthesis of a joint graph with minimal number of edges: an algorithm formalization and a proof of correctness.}
+{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{Article name Article name Article name.}
 
 {\small Text}
