Поправлен файл проекта

--- a/biblio.tex
+++ b/biblio.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Р›РёС‚РµСЂР°С‚СѓСЂР°.}
+{\bf{\SetMySection} Литература.}
 
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
 
