--- a/implementation.tex
+++ b/implementation.tex
@@ -1,6 +1,6 @@
 {\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем[2]). %поправить ссылки
  
-Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns-3 открыты для исследования, модификации и использования и доступны на сайте проекта[2]. В качестве встроенного языка описания моделей используются: C++ и Python. %поправить ссылки
+Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта[2]. В качестве встроенного языка описания моделей используются: C++ и Python. %поправить ссылки
 
 В ns-3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
@@ -14,7 +14,7 @@
 
 \item[$-$] изменение параметров: число абонентов, топология сети, закон изменения движения, протокол передачи данных, размер и интенсивность появления пакетов;
 
-\item[$-$] сбор статистики после проведенной симуляции;
+\item[$-$] сбор статистики после проведённой симуляции;
 
 \item[$-$] автоматический запуск набора экспериментов с различными параметрами;
 
