мелкие правки cloud, implementation, telematics

--- a/implementation.tex
+++ b/implementation.tex
@@ -39,7 +39,7 @@
 
 \begin{itemize}
 
-\item[$-$]Модель интерфейса 802.11s [5]. Реализация допускает использование протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
+\item[$-$]Модель интерфейса 802.11s [5]. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
 -Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV [2]. %поправить ссылки
 
 \item[$-$]FlowMonitor - модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
@@ -76,7 +76,7 @@
 
 \item[$-$] назначить IP-адреса узлам сети, включая виртуальный узел (метод Assign класса Ipv4InterfaceContainer);
 
-\item[$-$] задать маршрут от выбранного узла к LTE сети, через промежуточный много-интерфейсный узел с mesh и LTE (метод AddNetworkRouteTo класса Ipv4StaticRouting);
+\item[$-$] задать маршрут от выбранного узла к LTE сети, через промежуточный мультипротокольный узел с mesh и LTE (метод AddNetworkRouteTo класса Ipv4StaticRouting);
 
 \item[$-$] установить маршрут по умолчанию на LTE интерфейсах (через шлюз в этой сети, адрес шлюза получается методом GetUeDefaultGatewayAddress класса EpcHelper и устанавливается методом SetDefaultRoute класса Ipv4StaticRouting). 
 
