Поправлена часть литературы

--- a/biblio.tex
+++ b/biblio.tex
@@ -1,26 +1,32 @@
 {\bf{\SetMySection} Литература.}
 
+%!!! Msadaa:2010:CSM:1848649.1849209
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
 
+%!!! 5678993
 %[2] HIGHWAY MOBILITY AND VEHICULAR AD-HOC NETWORKS IN NS-3 Hadi Arbabi Michele C. Weigle http://arxiv.org/pdf/1004.4554v2.pdf
 
+%!!! Nsnam.org
 %[3] http://www.nsnam.org/
 
+%!!! Andreev
 %[4] IEEE 802.11s Mesh Networking NS-3 Model. Kirill Andreev, Pavel Boyko http://www.nsnam.org/workshops/wns3-2010/dot11s.pdf
 
+%!!! LTE
 %[5] ns-3 models. LTE Module  http://www.nsnam.org/docs/release/3.16/models/html/lte.html
 
+%!!! Narra:2011:DDV:2151054.2151132
 %[6] Destination-Sequenced Distance Vector (DSDV) Routing Protocol Implementation in ns-3.  Hemanth Narra, Yufei Cheng, Egemen K. ?etinkaya, Justin P. Rohrer and James P.G. Sterbenz Information and Telecommunication Technology Center Department of Electrical Engineering and Computer Science The University of Kansas, Lawrence, KS 66045, USA
 
 
 %[7]	Comparision of performance of routing protocol in Wireless Mesh Network. Nikunj R.Nomulwar, Mrs. VarshaPriya J. N., Dr. B. B. Meshram ,Mr. S. T. Shinghade. The International Journal of Computer Science & Applications (TIJCSA).
 
-
+%!!! Ford.co.uk,
 %[8] Ford.co.uk (2012). News from ford. ford's sync emergency assistance could provide important support to road accident victims says aa president. Retrieved March, 15, 2013 from http://www.ford.co.uk/experience-ford/AboutFord/News/CompanyNews/2012/Fords-Sync-Emergency-Assistance.
 
 
 %[9]	Instrumental Environment of Multi-Protocol Cloud-Oriented Vehicular MESH Network	ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г.
 
-%[10]	Road Traffic Efficiency and Safety Improvements Trends	ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г., Тимофеев Д. А.
+%[10]	Road Traffic Efficiency and Safety Improvements Trends ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г., Тимофеев Д. А.
 
 %[11]	Проблемы построения интеллектуальной транспортной сети Сборник материалов международной научно-методической конференции "Высокие интеллектуальные технологии и инновации в национальных исследовательских университетах". - СПб.:Изд-во СПбГПУ, 2013, Том 1, стр. 32-34	Курочкин М. А., Попов С. Г.
