--- a/article_IP.bib
+++ b/article_IP.bib
@@ -69,3 +69,27 @@ ISSN={0891-7736},}
   howpublished = {Retrieved  March, 15, 2013 from \url{http://www.ford.co.uk/experience-ford/AboutFord/News/CompanyNews/2012/Fords-Sync-Emergency-Assistance}},
   year = {2012},
 }
+
+@INPROCEEDINGS{Instrumental,
+     author = {Glazunov Vadim, Kurochkin Leonid,  Kurochkin Mihail and Popov Sergey},
+      title = {Instrumental Environment of Multi-Protocol Cloud-Oriented Vehicular MESH Network},
+  booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
+       year = {2013},
+   location = {Reykjavic, Iceland}
+}
+
+@INPROCEEDINGS{Road,
+     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail, Popov Sergey and Timofeev Dimitri},
+      title = {Road Traffic Efficiency and Safety Improvements Trends},
+  booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
+       year = {2013},
+   location = {Reykjavic, Iceland}
+}
+
+@INPROCEEDINGS{,
+     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail, Popov Sergey and Timofeev Dimitri},
+      title = {Road Traffic Efficiency and Safety Improvements Trends},
+  booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
+       year = {2013},
+   location = {Reykjavic, Iceland}
+}
