--- a/article_IP.tex
+++ b/article_IP.tex
@@ -122,6 +122,7 @@ Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, 
 \input{conclusion.tex}
 
 %\section{Литература}%Серёжа
+\input{biblio.tex}
 
 %сведения об авторах
 \input{authors.tex}
