--- a/biblio.tex
+++ b/biblio.tex
@@ -1,4 +1,5 @@
 {\bf{\SetMySection} Литература.}
+\bibliography{article_IP}{}
 
 %!!! Msadaa:2010:CSM:1848649.1849209
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
@@ -24,9 +25,11 @@
 %!!! Ford.co.uk,
 %[8] Ford.co.uk (2012). News from ford. ford's sync emergency assistance could provide important support to road accident victims says aa president. Retrieved March, 15, 2013 from http://www.ford.co.uk/experience-ford/AboutFord/News/CompanyNews/2012/Fords-Sync-Emergency-Assistance.
 
-
+%!!! Instrumental
 %[9]	Instrumental Environment of Multi-Protocol Cloud-Oriented Vehicular MESH Network	ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г.
 
+%!!! Road
 %[10]	Road Traffic Efficiency and Safety Improvements Trends ICETE 2013, 10th international joint conference on e-business and telecommunications, REYKJAVIK, ICELAND, 29-31 JULY	Курочкин Л. М., Курочкин М. А., Попов С. Г., Тимофеев Д. А.
+
 
 %[11]	Проблемы построения интеллектуальной транспортной сети Сборник материалов международной научно-методической конференции "Высокие интеллектуальные технологии и инновации в национальных исследовательских университетах". - СПб.:Изд-во СПбГПУ, 2013, Том 1, стр. 32-34	Курочкин М. А., Попов С. Г.
