--- a/intro.tex
+++ b/intro.tex
@@ -1,1 +1,1 @@
-{\bf{\SetMySection}~Введение.} Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных.
+{\bf{\SetMySection}~Введение.} Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных~\cite{Andreev}.
