--- a/auto.tex
+++ b/auto.tex
@@ -1,118 +1,115 @@
-{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.} Новые направления развития информационных услуг. Описание сервисов в мобильных mesh-сетях. Перспективные направления предоставления информационных услуг базируются на системе SYNC и предоставляют клиентам компании ФОРД следующие возможности:
+{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.} Новые направления развития информационных услуг. Описание сервисов в мобильных mesh-сетях. 
+Перспективные направления предоставления информационных услуг базируются на облачно--ориентированных системах. 
+Примером таких систем может служить SYNC\cite{Ford.co.uk}, которая используется компанией ФОРД.
+
+
+Водитель может являтся потребителем индивидуальных услуг в облачной среде, предоставляющей следующие возможности:
 
 \begin{enumerate}
 
-\item[$-$] Мониторинг технического состояния автомобилей и сокращение числа обращений в сервисные центры;
+\item Мониторинг технического состояния автомобилей и сокращение числа обращений в сервисные центры;
 
-\item[$-$] упрощение финансовых расчетов клиентов компании при эксплуатации автомобиля;
+\item упрощение финансовых расчетов клиентов компании при эксплуатации автомобиля;
 
-\item[$-$] комплексное решение эксплуатационных и транспортных задач;
+\item комплексное решение эксплуатационных и транспортных задач;
 
-\item[$-$] расширение области информационно-развлекательных услуг;
+\item расширение области информационно-развлекательных услуг;
 
-\item[$-$] мониторинг обстановки на трассе движения и оперативная помощь в сложных или аварийных ситуациях.
+\item мониторинг обстановки на трассе движения и оперативная помощь в сложных или аварийных ситуациях.
 
 \end{enumerate}
 
-Реализация этих возможностей создает повышенные удобства водителям и пассажирам автомобилей ФОРД.
+Реализация этих возможностей создает повышенные удобства водителям и пассажирам автомобилей.
 
 Новые возможности реализуются в среде облачных вычислений с использованием беспроводного подключения встроенного оборудования к облачной среде.
 
-{\bf{\SetMySubSection} Категории абонентов информационных услуг.} Здесь должен быть текст.
+{\bf{\SetMySubSection} Категории абонентов информационных услуг.} Потребителями информационных услуг можно разделить на несколько категорий абонентов, в одну категорию попадут облачные службы, предоставляющие непосредственно услуги водителям, во вторую категорию попадают сами участники движения: водители и пассажиры автомобилей, в третью категорию попадают элементы дорожной инфраструктуры и специальные транспортные средства. 
+
+%\begin{itemize}
+
+%\item[$-$] автомобиль (VIN);
+
+%\item аналитический центр;
+
+%\item водитель (владелец автомобиля);
+
+%\item водители автомобилей;
+
+%\item пассажиры автомобилей;
+
+%\item региональные службы управления движением;
+
+%\item сервисные центры;
+
+%\item службы помощи на дорогах;
+
+%\item специальные транспортные средства;
+
+%\item спецслужбы;
+
+%\item элементы <<умной>> дороги.
+
+%\end{itemize}
+
+{\bf{\SetMySubSection}Набор функций для пользователей информационных услуг.} Телематические услуги предоставляемые различным категориям абонентов:
 
 \begin{itemize}
 
-\item автомобиль (VIN);
+\item[$-$] Сообщение о погодных условиях и состоянии дорожного покрытия. 
+В данном случае в облако и напрямую водителям, передаются данные о температуре, влажности и давлении --- эти данные собираются с датчиков бортовой системы.
 
-\item аналитический центр ФОРД;
+\item[$-$] Оперативные изменения в транспортной сети. Из облака, передаются оперативные данные о: перекрытии дорог, изменении числа полос и рядности движения, изменении скоростного режима, неработающих светофоры, пробки, ДТП. Источником этих данных являются дорожные службы, службы типа <<Яндекс.Пробки>> и непосредственно водители. 
 
-\item водитель (владелец автомобиля);
+\item[$-$] Сообщение о правилах регулирования дорожного движения. 
+Действующие знаки, светофоры, приближение транспортных средств с особым режимом движения: скорая, пожарная службы.
+Данные приходят от других транспортных средств, а также непосредственно от самих элементов дорожной сети (<<умная>> дорога).
 
-\item водители автомобилей FORD;
+\item[$-$] Сбор и отображение данных о местоположении автомобилей других участников движения. 
 
-\item другие автомобили FORD;
+\item[$-$] Автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию. Данные изначально хранятся локально и потом выгружаются в облако.
 
-\item пассажиры автомобилей;
-
-\item региональные службы управления движением;
-
-\item сервисные центры;
-
-\item службы помощи на дорогах;
-
-\item специальные ТС;
-
-\item спецслужбы;
-
-\item элементы <<умной>> дороги.
-
-\end{itemize}
-
-{\bf{\SetMySubSection}Набор функций для пользователей информационных услуг.} Описывается набор телематических услуг.
-
-{\bf{\SetMySubSubSection}Сообщение о погодных условиях, состояния дорожного покрытия.} В облако и напрямую водителям, передаются данные: температура, влажность, давление - данные собираются с датчиков бортовой системой и отправляются в облако с некоторой частотой в зависимости от скорости движения ($\Delta t$), эти данные актуальны в течение некоторого времени, которое может задаваться облаком; состояние дороги: ямы, колея - регистрируется на основе датчиков сотрясения (акселерометров), за некоторое расстояние накапливаются в памяти и раз в 500-100 метров или за другой интервал отправляются пакетом в облако. 
-
-Из облака получаем данные: информацию о погоде, можно получать данные о погоде на протяжении проложенного навигационной системой маршрута, при наличии - актуальную информацию полученную от других участников движения, при недоступности таких данных - прогноз Гидрометцентра. Передается время когда эти данные были получены облаком, что позволит судить об актуальности получаемых данных; так же из облака получаем данные о состоянии дорожного покрытия по маршруту.
-
-{\bf{\SetMySubSubSection} Сообщение об оперативных изменениях в транспортной сети.} Из облака, передаются оперативные данные о: перекрытии дорог, изменении числа полос и рядности движения, изменении скоростного режима, неработающих светофоры, пробки, ДТП. Источником этих данных являются дорожные службы, службы типа <<Яндекс.Пробки>> и непосредственно водители. Для таких данных аналитическим центром или дорожными службами устанавливается время актуальности, также водители могут отправлять данные об отмене действовавших ограничений. В качестве данных также передается средняя скорость и координаты участка пройденного за некое время $\Delta t$. После статистического анализа данных какие--то результаты и подсказки для бортовой навигации рассылаются обратно автомобилям. Дополнительно могут быть установлены датчики определяющие есть ли другие машины вокруг движущегося транспортного средства.
-
-{\bf{\SetMySubSubSection} Сообщение о правилах регулирования дорожного движения.} Действующие знаки, светофоры, приближение транспортных средств с особым режимом движения: скорая, пожарная службы.
-
-Данные приходят от других транспортных средств, а также непосредственно от самих элементов дорожной сети (светофоры, знаки и т.п.): получение сообщений от дорожной сети <<умная дорога>> о действующих знаках, разметке и показаниях светофоров (типа <<локомотивный светофор>>) и получение данных о приближающихся специальных транспортных средствах, которым необходимо уступить дорогу --- источником таких данных может быть облако или само специальное транспортное средство, если оно оснащено соответствующими передатчиками.
-
-{\bf{\SetMySubSubSection} Сбор и отображение данных о местоположении автомобилей других участников движения.} Данные передаются от других автомобилей FORD или из облака: источники данных --- другие транспортные средства FORD, они транслируют свои координаты с некоторым интервалом в облако и другим автомобилям, опрос этих данных тоже выполняется с некоторой частотой.
-
-{\bf{\SetMySubSubSection} Автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию.} Данные изначально хранятся локально и потом выгружаются в облако: Локальное (в базе бортовой системы) сохранение с заданной частотой координат путевых точек пройденного маршрута (запись трека), запись видео либо непрерывно, либо по заданным водителем правилам (фото/видео раз в какое-то время или расстояние, фото/видео по нажатию кнопки, например, фото поворота на хитрой развязке дорог). Дополнительно можно выгружать какие-то из этих данных по выбору водителя в облако, чтобы помочь другим преодолеть тот же маршрут (подсказки водителю и навигационной системе) или еще для чего-либо. В последствии пользователь может извлечь данные из облака, чтобы посмотреть как возвращаться.
-
-{\bf{\SetMySubSubSection} Уточнение данных о дорожной обстановке в центре управления транспортными средствами.} Данные в центр обслуживания: голосовой канал связи с центром обслуживания и реагирования (будет ли использоваться для организации такого канала mesh-сеть - вопрос), будет предназначаться для помощи водителю на дорогах (заблудился, закрыта дорога и т.п.).
+\item[$-$] Уточнение данных о дорожной обстановке в центре управления транспортными средствами. Данные в центр обслуживания: голосовой канал связи с центром обслуживания и реагирования, будет предназначаться для помощи водителю на дорогах.
  
-{\bf{\SetMySubSubSection} Передача сообщений об аварийных ситуациях.} В облако и другим водителям: источник --- автомобиль в аварийной ситуации или автомобили, находящиеся рядом, приемники --- все категории пользователей (автомобили рядом, спецслужбы, дорожные службы, облако и аналитический центр и т. д.) Передаются координаты и код, сообщающий о категории аварийной ситуации. По возможности передается набор видеоданных (15--30 секунд). В службу спасения отправляется текстовое сообщение со ссылкой на видео и координаты.
+\item[$-$] Передача сообщений об аварийных ситуациях. Передаются координаты и код, сообщающий о категории аварийной ситуации. По возможности передается набор видеоданных, принимающей стораной этих данных является облако и все водители в ближайшем радиусе.
 
-{\bf{\SetMySubSubSection} Автоматическая оплата услуг (дороги, парковки, топливо).} Вопрос для обсуждения: каким образом организовать платежную систему в рамках рассматриваемой большой задачи. Данные для передачи: данные аутентификации, тип услуги, номер поставщика, сумма оплаты.
+\item[$-$] Автоматическая оплата услуг (дороги, парковки, топливо).
 
-{\bf{\SetMySubSubSection} Отправка сообщений <<SOS>> автомобилям в определенном радиусе: <<кончился бензин>>, <<сел аккумулятор>>, <<спустило колесо, нет запасного>>, <<застрял, помогите выехать>>.} Данные передаются напрямую другим автомобилям, либо транзитом через облако другим автомобилям, а также в службы помощи на дорогах: радиус рассылки сообщений необходимо формировать динамически на основе местоположения (например, в городе сообщения должны получать автомобили, находящиеся в пределах 2--3 км от просящего помощи, в удаленных районах --- до 100 км); данные для отправки: координаты, состояние: еду, медленно еду, стою, текстовое сообщение из числа заранее определенных шаблонов или формируемое водителем (сервисное сообщение). Источник --- автомобиль, приемники: облако, другие авто в заданном радиусе, службы помощи на дороге.
+\item[$-$] Отправка сообщений <<SOS>> автомобилям в определенном радиусе: <<кончился бензин>>, <<сел аккумулятор>>, <<спустило колесо, нет запасного>>, <<застрял, помогите выехать>>. Данные передаются напрямую другим автомобилям, либо транзитом через облако другим автомобилям, а также в службы помощи на дорогах: радиус рассылки сообщений необходимо формировать динамически на основе местоположения(город, отдаленный населенный пункт).
 
-{\bf{\SetMySubSubSection} Срабатывание датчиков охранного комплекса и/или угон автомобиля.} Отправка сведений всеми доступными способами с приложением фото--, видео-- и аудиоданных с внешних/внутренних камер и микрофонов.
+\item[$-$] Срабатывание датчиков охранного комплекса и/или угон автомобиля. Отправка сведений всеми доступными способами с приложением фото--, видео-- и аудиоданных с внешних/внутренних камер и микрофонов.
 
-Данные передаются в облако, а также другим автомобилям, спецслужбам и владельцу: передается тип сработавших датчиков: продольное/поперечное/вертикальное ускорение, сотрясение кузова, разбитое стекло, датчики внутреннего объема, запуск двигателя в обход иммобилайзера, отключение систем охранного комплекса, аудио/видеозапись с внутренней и внешней камер за 30--60 секунд до срабатывания охранной системы, при обнаружении перемещения машины --- координаты и потоковое видео вещание при доступности соответствующего канала, было бы неплохо иметь возможность получать специальные сообщения от оператора службы безопасости или водителя для срабатывания аварийных программ защиты: включение пульсации всех внешних световых приборов, при остановке --- отключение двигателя, блокировка трансмиссии. Владелец получает смс, email или другое сообщение для информирования о проблемах с нарушением безопасности транспортного средства.
 
-{\bf{\SetMySubSubSection} Аудио и видео консультации водителя о техническом состоянии автомобиля.} Из облака: поток аудио/видео данных между аналитическим центром и водителем. Аудио консультации по поводу неправильной работы автомобиля (стучит двигатель, отвалился глушитель, проблемы с заводом и т.п.)
+\item[$-$] Аудио и видео консультации водителя о техническом состоянии автомобиля. Из облака: поток аудио/видео данных между аналитическим центром и водителем. 
 
-{\bf{\SetMySubSubSection} Дистанционный сбор данных об отказах и сбоях оборудования.} В облако: периодически отсылает текущее состояние с датчиков автомобиля, а также статистические данные за весь период эксплуатации автомобиля (256кб хватит на все), в этих данных также отображаются аварийные ситуации произошедшие с опрашиваемым оборудованием. Данные представляют собой структуру содержащую тип оборудования, его состояние в измеряемых единицах (процент износа, работает/не работает и т.п.), время (вопрос: как синхронизировать время) перехода оборудования в это состояние, а также указатель на список таких структур хранящий предыдущие изменения состояний этого оборудования.
+\item[$-$] Дистанционный сбор данных об отказах и сбоях оборудования. В облако: периодически отсылает текущее состояние с датчиков автомобиля, а также статистические данные за весь период эксплуатации автомобиля, в этих данных также отображаются аварийные ситуации произошедшие с опрашиваемым оборудованием. 
 
-{\bf{\SetMySubSubSection} Дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля.} В облако: VIN, версия программного обеспечения, перечень аппаратных компонентов автомобиля.
+\item[$-$] Дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля.
 
-Из облака: двоичный образ микропрограммы, ее контрольная сумма и цифровая подпись для проверки целостности. Обновление прошивки происходит по своему регламенту, например, в процессе стоянки автомобиля, без запроса от пользователя, в случае возникновения ошибки обновления, ПО откатывается к предыдущей версии.
 
-{\bf{\SetMySubSection} Дистанционное управление агрегатами автомобиля: двигатель, трансмиссия, устройства освещения.} Из облака: команда с типом агрегата, которым должно осуществляться управление, новое состояние этого агрегата. Запрос на эту команду посылается, либо водителем (открыть дверь, запустить двигатель), либо каким-либо другим средством или лицом имеющий авторизованный доступ к этой команде на конкретном автомобиле.
+\item[$-$] Дистанционное управление агрегатами автомобиля: двигатель, трансмиссия, устройства освещения. 
 
-{\bf{\SetMySubSubSection} Сообщения о необходимости прохождении технических осмотров или срочного ремонта.} Из облака: информационное сообщение для водителя, напоминающее о необходимости прохождения ТО, либо замене какого-либо компонента в автомобиле. Пользователю может быть отправлена информация о ближайших сервисных центрах (координаты и название сервисных центров), в которые могут быть доставлены требуемые замены компоненты, а также ориентировочное время доставки этих компонентов. После подтверждения пользователем готовности посетить предложенный сервисный центр, ему назначается более точное время обслуживания.
+\item[$-$] Сообщения о необходимости прохождении технических осмотров или срочного ремонта. Из облака: информационное сообщение для водителя, напоминающее о необходимости прохождения ТО, либо замене какого-либо компонента в автомобиле. Пользователю может быть отправлена информация о ближайших сервисных центрах, в которые могут быть доставлены требуемые замены компоненты, а также ориентировочное время доставки этих компонентов. 
 
-В облако: данные с датчиков автомобиля, сообщающие о критическом уровне износа или неисправности какого-либо компонента автомобиля, позволяющие предсказать выход из строя этого компонента. Информация может быть получена в сервис-центре, до того как автомобиль приедет на ТО, что позволит сократить время обслуживания, благодаря тому что недостающие детали будут заказаны заранее.
+\item[$-$] Централизованный сбор и хранение данных об особых событиях в автомобиле: открытие кузова, заправка или слив топлива, длительная стоянка.
 
-{\bf{\SetMySubSubSection} Централизованный сбор и хранение данных об особых событиях в автомобиле.} Открытие кузова, заправка или слив топлива, длительная стоянка.
 
-В облако: тип события, его состояние, время возникновения, а также указатель на структуру таких событий хранящий в себе историю их возникновения. Цель - функционирование виртуальной логистической среды, для грузовиков и коммерческих автомобилей. По сравнению с п.1.3.2.1 предоставляется расширенный набор параметров, выбираемых для отправки пользователем.
+\item[$-$] Контроль качества выполнения сервисного обслуживания. В облако отправляются данные о состоянии датчиков автомобиля после сервисного обслуживания. Служит для контроля качества выполнения работ в официальном сервисном центре производителем.
 
-{\bf{\SetMySubSubSection} Контроль качества выполнения сервисного обслуживания (особо актуально для стран восточной Европы).} В облако: состояние датчиков автомобиля после сервисного обслуживания, отправленное в аналитический центр. Служит для контроля качества выполнения работ в официальном сервисном центре производителем. Признак прохождения сервисного обслуживания выставляется водителем.
+\item[$-$] Статистическая информация о пропускной способности канала передачи данных в разных частях дорожной сети.
 
-{\bf{\SetMySubSection} Телекоммуникационная среда для пассажиров автомобилей.} Поток данных идет с низким приоритетом относительно других видов трафика между автомобилями, одной виртуальной локальной сети, если передача осуществляется посредством сторонних автомобилей не входящих в эту сеть, они вправе отклонить этот тип трафика и не передавать дальше. Пользователи подключаются к виртуальной локальной сети посредством доступных и популярных беспроводных технологий. 
+\item[$-$] Телекоммуникационная среда для пассажиров автомобилей. В данную услугу входят такие сервисы, как: 
 
 \begin{itemize}
 
 \item[$-$] Подключение к удалённым сервисам через мобильную сеть (личная электронная почта, социальные сети, блоги, микросообщения).
 
-\item[$-$] Организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока ("виртуальный автобус", видеоигры, общение в общем видеочате).
+\item[$-$] Организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока (<<виртуальный автобус>>, видеоигры, общение в общем видеочате).
 
-\item[$-$]Доступ в глобальную сеть (объём определяется пропускной способностью сети).
+\item[$-$] Доступ в глобальную сеть.
 
 \end{itemize}
 
-{\bf{\SetMySubSubSection} Технологические функции.}  Статистическая информация о пропускной способности канала передачи данных в разных частях дорожной сети.
-
-Можно вставить таблицу с числами из файла "Анализ данных"
-
-Методы повышения надежности передачи данных
+\end{itemize}
 
 Большие объемы данных характерны для: 
 
